@@ -20,6 +20,8 @@ version ? (????-??-??):
   - receipts: positions adding with double click protection (alec)
   - lmsd configuration: instances cloning (alec) 
   - perl backend: except_networks parameter added (chilan)
+  - added phpui/custom_menu option with possibility to add user-defined items
+    and/or subitems to LMS menu (alec)
 
 version 1.11.1 Talus (2007-12-03):
 
